--- a/hackathon/register.html
+++ b/hackathon/register.html
@@ -35,21 +35,25 @@
             <div class="wrap-login100">
                 <form class="login100-form validate-form">
                     <span class="login100-form-title p-b-26">
-                        Welcome
+                        Welcome to Shakedeal
                     </span>
                     <span class="login100-form-title p-b-48">
                         <i class="zmdi zmdi-font"></i>
                     </span>
+                    <div class="wrap-input100 validate-input" data-validate="Enter Name">
+                        <input class="input100" type="text" name="name">
+                        <span class="focus-input100" data-placeholder="Name"></span>
+                    </div>
                     <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
                         <input class="input100" type="text" name="email">
                         <span class="focus-input100" data-placeholder="Email"></span>
                     </div>
-                    <div class="wrap-input100 validate-input" data-validate="Enter password">
+                    <div class="wrap-input100 validate-input" data-validate="Enter City">
                         <span class="btn-show-pass">
                             <i class="zmdi zmdi-eye"></i>
                         </span>
-                        <input class="input100" type="password" name="pass">
-                        <span class="focus-input100" data-placeholder="Password"></span>
+                        <input class="input100" type="text" name="pass">
+                        <span class="focus-input100" data-placeholder="City"></span>
                     </div>
                     <div class="container-login100-form-btn">
                         <div class="wrap-login100-form-btn">
