--- a/hackathon/login.html
+++ b/hackathon/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Login V2</title>
+    <title>ShakeDeal Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -41,15 +41,15 @@
                         <i class="zmdi zmdi-font"></i>
                     </span>
                     <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
-                        <input class="input100" type="text" name="email">
-                        <span class="focus-input100" data-placeholder="Email"></span>
+                        <input class="input100" type="text" name="City">
+                        <span class="focus-input100" data-placeholder="City"></span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="Enter password">
                         <span class="btn-show-pass">
                             <i class="zmdi zmdi-eye"></i>
                         </span>
-                        <input class="input100" type="password" name="pass">
-                        <span class="focus-input100" data-placeholder="Password"></span>
+                        <input class="input100" type="password" name="cid">
+                        <span class="focus-input100" data-placeholder="CustomerID"></span>
                     </div>
                     <div class="container-login100-form-btn">
                         <div class="wrap-login100-form-btn">
@@ -63,7 +63,7 @@
                         <span class="txt1">
                             Don’t have an account?
                         </span>
-                        <a class="txt2" href="#">
+                        <a class="txt2" href="register.html">
                             Sign Up
                         </a>
                     </div>
