--- a/hackathon/register.html
+++ b/hackathon/register.html
@@ -65,19 +65,19 @@
                     </div>
                     <div class="text-center p-t-115">
                         <span class="txt1">
-                            Don’t have an account?
+                            Already have an account?
                         </span>
-                        <a class="txt2" href="#">
-                            Sign Up
+                        <a class="txt2" href="login.html">
+                            Login
                         </a>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    <div id="dropDownSelect1"></div>
+    <!-- <div id="dropDownSelect1"></div> -->
 
-    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 
     <script src="vendor/animsition/js/animsition.min.js"></script>
 
@@ -91,16 +91,16 @@
 
     <script src="vendor/countdowntime/countdowntime.js"></script>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js"></script> -->
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-23581568-13');
-    </script>
+    </script> -->
 </body>
 
 </html>
