--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
-    <link rel="stylesheet" href="css/desktop/sponsor.css">
+    <link rel="stylesheet" href="css/sponsor.css">
     <link rel="icon" type="image/png" href="./images/xuberance.png">
 
     <title>Partners</title>
