--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -16,6 +16,8 @@
     <title>Partners</title>
 </head>
 
+<!-- TODO: Slideshow carousel showing the slogan "Made in India lasts forever, 2nd slide - "Why should you buy Indian Products - Excise Duty costs cut and it increases the intrinsic GDP of the country" -->
+
 <body>
     <!-- <div id="loader"></div> -->
     <style>
