--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -94,7 +94,7 @@
                 <div class="flipkart-navbar-search smallsearch col-sm-8 col-xs-11">
                     <div class="row">
                         <input class="flipkart-navbar-input col-xs-11" type=""
-                            placeholder="Search for Products, Brands and more" name="">
+                            placeholder="Search for Products, Brands and more" name="Search" style="color: black;">
                         <button class="flipkart-navbar-button col-xs-1">
                             <svg width="15px" height="15px">
                                 <path
