--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -34,37 +34,18 @@
             background-color: black;
         }
     </style>
-    <!-- <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="index.html"><img src="images/xuberance.png" width="25px" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="live.html">Auditorium</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="sponsor.html">Partners</a>
-                </li>
-            </ul>
-        </div>
-    </nav> -->
     <div id="flipkart-navbar">
         <div class="container">
             <div class="row row1">
                 <ul class="largenav pull-right">
-                    <li class="upper-links"><a class="links" href="http://clashhacks.in/">Link 1</a></li>
-                    <li class="upper-links"><a class="links" href="https://campusbox.org/">Link 2</a></li>
-                    <li class="upper-links"><a class="links" href="http://clashhacks.in/">Link 3</a></li>
-                    <li class="upper-links"><a class="links" href="http://clashhacks.in/">Link 4</a></li>
-                    <li class="upper-links"><a class="links" href="http://clashhacks.in/">Link 5</a></li>
-                    <li class="upper-links"><a class="links" href="http://clashhacks.in/">Link 6</a></li>
+                    <li class="upper-links"><a class="links" href="">Link 1</a></li>
+                    <li class="upper-links"><a class="links" href="">Link 2</a></li>
+                    <li class="upper-links"><a class="links" href="">Link 3</a></li>
+                    <li class="upper-links"><a class="links" href="">Link 4</a></li>
+                    <li class="upper-links"><a class="links" href="">Link 5</a></li>
+                    <li class="upper-links"><a class="links" href="">Link 6</a></li>
                     <li class="upper-links">
-                        <a class="links" href="http://clashhacks.in/">
+                        <a class="links" href="">
                             <svg class="" width="16px" height="12px" style="overflow: visible;">
                                 <path
                                     d="M8.037 17.546c1.487 0 2.417-.93 2.417-2.417H5.62c0 1.486.93 2.415 2.417 2.415m5.315-6.463v-2.97h-.005c-.044-3.266-1.67-5.46-4.337-5.98v-.81C9.01.622 8.436.05 7.735.05 7.033.05 6.46.624 6.46 1.325v.808c-2.667.52-4.294 2.716-4.338 5.98h-.005v2.972l-1.843 1.42v1.376h14.92v-1.375l-1.842-1.42z"
@@ -72,16 +53,16 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="http://clashhacks.in/">Dropdown</a>
+                    <li class="upper-links dropdown"><a class="links" href="">Dropdown</a>
                         <ul class="dropdown-menu">
-                            <li class="profile-li"><a class="profile-links" href="http://yazilife.com/">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="http://hacksociety.tech/">Link</a>
+                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Link</a>
                             </li>
-                            <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -122,10 +103,10 @@
             <span class="sidenav-heading">Home</span>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         </div>
-        <a href="http://clashhacks.in/">Link</a>
-        <a href="http://clashhacks.in/">Link</a>
-        <a href="http://clashhacks.in/">Link</a>
-        <a href="http://clashhacks.in/">Link</a>
+        <a href="">Link</a>
+        <a href="">Link</a>
+        <a href="">Link</a>
+        <a href="">Link</a>
     </div>
 
     <div class="photo-gallery background">
