--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -109,6 +109,51 @@
         <a href="">Link</a>
     </div>
 
+    <!-- Swiper -->
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">Slide 6</div>
+            <div class="swiper-slide">Slide 7</div>
+            <div class="swiper-slide">Slide 8</div>
+            <div class="swiper-slide">Slide 9</div>
+            <div class="swiper-slide">Slide 10</div>
+        </div>
+        <!-- Add Arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+    </div>
+    <style>
+        .swiper-container {
+            width: 100%;
+            height: 100%;
+        }
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+
+            /* Center slide text vertically */
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            -webkit-justify-content: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+        }
+    </style>
+
     <div class="photo-gallery background">
         <div class="container">
             <div class="intro">
@@ -119,7 +164,7 @@
             </div>
             <div class="row photos">
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
-                    <img class="img-fluid image" src="images/Stall 1.png">
+                    <img class="img-fluid image" src="images/Shakedeal stall.png">
                     <a href="sponsors/sp.html">
                         <div class="overlay">
                             <div class="text"><span class="company-name">Subtle Pixel</span> <br>
@@ -131,7 +176,7 @@
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
-                    <img class="img-fluid image" src="images/REMO.png">
+                    <img class="img-fluid image" src="images/Shakedeal stall.png">
                     <a href="sponsors/remo.html">
                         <div class="overlay">
                             <div class="text"><span class="company-name">REMO</span> <br>
@@ -143,7 +188,7 @@
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
-                    <img class="img-fluid image" src="images/Hult.png">
+                    <img class="img-fluid image" src="images/Shakedeal stall.png">
                     <a href="sponsors/hult.html">
                         <div class="overlay">
                             <div class="text"><span class="company-name">Hult Prize</span> <br>
@@ -156,7 +201,7 @@
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
-                    <img class="img-fluid image" src="images/Finotize.png">
+                    <img class="img-fluid image" src="images/Shakedeal stall.png">
                     <a href="sponsors/finotize.html">
                         <div class="overlay">
                             <div class="text"><span class="company-name">Finotize</span> <br>
@@ -168,7 +213,7 @@
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
-                    <img class="img-fluid image" src="images/First.png">
+                    <img class="img-fluid image" src="images/Shakedeal stall.png">
                     <a href="sponsors/firstmain.html">
                         <div class="overlay">
                             <div class="text"><span class="company-name">FIRST MAIN</span> <br>
@@ -180,7 +225,7 @@
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
-                    <img class="img-fluid image" src="images/ECell stall1.png">
+                    <img class="img-fluid image" src="images/Shakedeal stall.png">
                     <a href="https://www.ecellrvce.in">
                         <div class="overlay">
                             <div class="text"><span class="company-name">E-Cell RVCE</span> <br>
@@ -216,7 +261,7 @@
                 document.getElementById("mySidenav").style.width = "0";
                 document.body.style.backgroundColor = "rgba(0,0,0,0)";
             }
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
@@ -234,6 +279,18 @@
         });
     </script> -->
 
+    <!-- Swiper JS -->
+    <script src="../package/swiper-bundle.min.js"></script>
+
+
+    <script>
+        var swiper = new Swiper('.swiper-container', {
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+    </script>
 
 </body>
 
