--- a/hackathon/products/index.html
+++ b/hackathon/products/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
 
-  	<div class="wrap">
+  	<!-- <div class="wrap">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 d-flex align-items-center">
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
