--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -20,7 +20,7 @@
   </head>
   <body>
 
-  	<!-- <div class="wrap">
+  	<div class="wrap">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 d-flex align-items-center">
@@ -44,11 +44,11 @@
 					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Liquor <span>store</span></a>
+	      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" style="width: 150px;"></a>
 	      <div class="order-lg-last btn-group">
           <a href="#" class="btn-cart dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           	<span class="flaticon-shopping-bag"></span>
