--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -239,7 +239,7 @@
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
-                    <img class="img-fluid image" src="images/Shakedeal stall.png">
+                    <img class="img-fluid image" src="images/Woodland.png">
                     <a href="sponsors/remo.html">
                         <div class="overlay">
                             <div class="text"><span class="company-name">REMO</span> <br>
@@ -264,7 +264,7 @@
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
-                    <img class="img-fluid image" src="images/Shakedeal stall.png">
+                    <img class="img-fluid image" src="images/Woodland.png">
                     <a href="sponsors/finotize.html">
                         <div class="overlay">
                             <div class="text"><span class="company-name">Finotize</span> <br>
@@ -288,7 +288,7 @@
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
-                    <img class="img-fluid image" src="images/Shakedeal stall.png">
+                    <img class="img-fluid image" src="images/Woodland.png">
                     <a href="https://www.ecellrvce.in">
                         <div class="overlay">
                             <div class="text"><span class="company-name">E-Cell RVCE</span> <br>
