--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -26,7 +26,7 @@
 					<div class="col-md-6 d-flex align-items-center">
 						<p class="mb-0 phone pl-md-2">
 							<a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-							<a href="#"><span class="fa fa-paper-plane mr-1"></span> youremail@email.com</a>
+							<a href="#"><span class="fa fa-paper-plane mr-1"></span> woodland@gmail.com</a>
 						</p>
 					</div>
 					<div class="col-md-6 d-flex justify-content-md-end">
@@ -38,9 +38,9 @@
 			    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
 			    		</p>
 		        </div>
-		        <div class="reg">
+		        <!-- <div class="reg">
 		        	<p class="mb-0"><a href="#" class="mr-2">Sign Up</a> <a href="#">Log In</a></p>
-		        </div>
+		        </div> -->
 					</div>
 				</div>
 			</div>
@@ -165,7 +165,7 @@
     <section class="ftco-section ftco-no-pb">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6 img img-3 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
+					<div class="col-md-6 img img-3 d-flex justify-content-center align-items-center" style="background-image: url(images/shoe1.jpg);">
 					</div>
 					<div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5">
 	          <div class="heading-section">
@@ -190,25 +190,25 @@
 				<div class="row">
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
-							<div class="img" style="background-image: url(images/kind-1.jpg);"></div>
+							<div class="img" style="background-image: url(images/shoe1.jpg);"></div>
 							<h3>Brandy</h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
-							<div class="img" style="background-image: url(images/kind-2.jpg);"></div>
+							<div class="img" style="background-image: url(images/shoe2.jpg);"></div>
 							<h3>Gin</h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
-							<div class="img" style="background-image: url(images/kind-3.jpg);"></div>
+							<div class="img" style="background-image: url(images/shoe3..jpeg);"></div>
 							<h3>Rum</h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
-							<div class="img" style="background-image: url(images/kind-4.jpg);"></div>
+							<div class="img" style="background-image: url(images/shoe4.jpg);"></div>
 							<h3>Tequila</h3>
 						</div>
 					</div>
@@ -227,7 +227,7 @@
 				<div class="row">
 					<div class="col-md-3 d-flex">
 						<div class="product ftco-animate">
-							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/prod-1.jpg);">
+							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/shoe1.jpg);">
 								<div class="desc">
 									<p class="meta-prod d-flex">
 										<a href="#" class="d-flex align-items-center justify-content-center"><span class="flaticon-shopping-bag"></span></a>
@@ -246,7 +246,7 @@
 					</div>
 					<div class="col-md-3 d-flex">
 						<div class="product ftco-animate">
-							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/prod-2.jpg);">
+							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/shoe4.jpg);">
 								<div class="desc">
 									<p class="meta-prod d-flex">
 										<a href="#" class="d-flex align-items-center justify-content-center"><span class="flaticon-shopping-bag"></span></a>
@@ -265,7 +265,7 @@
 					</div>
 					<div class="col-md-3 d-flex">
 						<div class="product ftco-animate">
-							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/prod-3.jpg);">
+							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/shoe2.jpg);">
 								<div class="desc">
 									<p class="meta-prod d-flex">
 										<a href="#" class="d-flex align-items-center justify-content-center"><span class="flaticon-shopping-bag"></span></a>
@@ -284,7 +284,7 @@
 					</div>
 					<div class="col-md-3 d-flex">
 						<div class="product ftco-animate">
-							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/prod-4.jpg);">
+							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/shoe3..jpeg);">
 								<div class="desc">
 									<p class="meta-prod d-flex">
 										<a href="#" class="d-flex align-items-center justify-content-center"><span class="flaticon-shopping-bag"></span></a>
