--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -131,8 +131,8 @@
     						<span class="flaticon-support"></span>
     					</div>
     					<div class="text">
-    						<h2>Online Support 24/7</h2>
-    						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    						<h2>Put your best foot forward</h2>
+    						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, laudantium.</p>
     					</div>
     				</div>
     			</div>
@@ -143,7 +143,7 @@
     					</div>
     					<div class="text">
     						<h2>Money Back Guarantee</h2>
-    						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, animi.</p>
     					</div>
     				</div>
     			</div>
@@ -154,7 +154,7 @@
     					</div>
     					<div class="text">
     						<h2>Free Shipping &amp; Return</h2>
-    						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, animi.</p>
     					</div>
     				</div>
     			</div>
@@ -169,14 +169,14 @@
 					</div>
 					<div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5">
 	          <div class="heading-section">
-	          	<span class="subheading">Since 1905</span>
-	            <h2 class="mb-4">Desire Meets A New Taste</h2>
+	          	<span class="subheading" style="color: green;">Since 1905</span>
+	            <h2 class="mb-4">Your Adventures, Our Shoes</h2>
 
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+	            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam fuga delectus ipsam corporis, impedit sequi!</p>
+	            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro maxime voluptate esse, et asperiores. A ipsum, veniam, quae numquam et odit sequi obcaecati, explicabo quia ex quasi doloremque alias.</p>
 	            <p class="year">
-	            	<strong class="number" data-number="115">0</strong>
-		            <span>Years of Experience In Business</span>
+	            	<strong class="number" data-number="1000000" style="color: green;">0</strong>
+		            <span>Customers Satisfied</span>
 	            </p>
 	          </div>
 
@@ -191,25 +191,25 @@
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
 							<div class="img" style="background-image: url(images/shoe1.jpg);"></div>
-							<h3>Brandy</h3>
+							<h3>Rugged Boots</h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
 							<div class="img" style="background-image: url(images/shoe2.jpg);"></div>
-							<h3>Gin</h3>
+							<h3>All Rounder</h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
 							<div class="img" style="background-image: url(images/shoe3..jpeg);"></div>
-							<h3>Rum</h3>
+							<h3>Classic</h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
 							<div class="img" style="background-image: url(images/shoe4.jpg);"></div>
-							<h3>Tequila</h3>
+							<h3>Snowman</h3>
 						</div>
 					</div>
 				</div>
@@ -238,9 +238,9 @@
 							</div>
 							<div class="text text-center">
 								<span class="sale">Sale</span>
-								<span class="category">Brandy</span>
-								<h2>Bacardi 151</h2>
-								<p class="mb-0"><span class="price price-sale">$69.00</span> <span class="price">$49.00</span></p>
+								<span class="category">Boots</span>
+								<h2>Rugged Boots</h2>
+								<p class="mb-0"><span class="price price-sale">6,595 </span> <span class="price">$49.00</span></p>
 							</div>
 						</div>
 					</div>
