--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -170,10 +170,10 @@
 					<div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5">
 	          <div class="heading-section">
 	          	<span class="subheading">Since 1905</span>
-	            <h2 class="mb-4">Desire Meets A New Taste</h2>
+	            <h2 class="mb-4">Desire Meets A New Style</h2>
 
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+	            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	            
 	            <p class="year">
 	            	<strong class="number" data-number="115">0</strong>
 		            <span>Years of Experience In Business</span>
@@ -191,25 +191,25 @@
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
 							<div class="img" style="background-image: url(images/shoe1.jpg);"></div>
-							<h3>Brandy</h3>
+							<h3>Shoe 1</h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
 							<div class="img" style="background-image: url(images/shoe2.jpg);"></div>
-							<h3>Gin</h3>
+							<h3>Shoe 2</h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
 							<div class="img" style="background-image: url(images/shoe3..jpeg);"></div>
-							<h3>Rum</h3>
+							<h3>Shoe 3</h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 ">
 						<div class="sort w-100 text-center ftco-animate">
 							<div class="img" style="background-image: url(images/shoe4.jpg);"></div>
-							<h3>Tequila</h3>
+							<h3>Shoe 4</h3>
 						</div>
 					</div>
 				</div>
@@ -238,8 +238,8 @@
 							</div>
 							<div class="text text-center">
 								<span class="sale">Sale</span>
-								<span class="category">Brandy</span>
-								<h2>Bacardi 151</h2>
+								<span class="category">Shoe 1</span>
+								<h2>Jamer 151</h2>
 								<p class="mb-0"><span class="price price-sale">$69.00</span> <span class="price">$49.00</span></p>
 							</div>
 						</div>
@@ -257,7 +257,7 @@
 							</div>
 							<div class="text text-center">
 								<span class="seller">Best Seller</span>
-								<span class="category">Gin</span>
+								<span class="category">Shoe 2</span>
 								<h2>Jim Beam Kentucky Straight</h2>
 								<span class="price">$69.00</span>
 							</div>
@@ -276,7 +276,7 @@
 							</div>
 							<div class="text text-center">
 								<span class="new">New Arrival</span>
-								<span class="category">Rum</span>
+								<span class="category">Shoe 3</span>
 								<h2>Citadelle</h2>
 								<span class="price">$69.00</span>
 							</div>
@@ -294,7 +294,7 @@
 								</div>
 							</div>
 							<div class="text text-center">
-								<span class="category">Rum</span>
+								<span class="category">Shoe 4</span>
 								<h2>The Glenlivet</h2>
 								<span class="price">$69.00</span>
 							</div>
