--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -240,7 +240,7 @@
 								<span class="sale">Sale</span>
 								<span class="category">Boots</span>
 								<h2>Rugged Boots</h2>
-								<p class="mb-0"><span class="price price-sale">6,595 </span> <span class="price">$49.00</span></p>
+								<p class="mb-0"><span class="price price-sale">Rs. 6,595 </span> <span class="price">Rs. 5,000</span></p>
 							</div>
 						</div>
 					</div>
@@ -257,9 +257,9 @@
 							</div>
 							<div class="text text-center">
 								<span class="seller">Best Seller</span>
-								<span class="category">Gin</span>
-								<h2>Jim Beam Kentucky Straight</h2>
-								<span class="price">$69.00</span>
+								<span class="category">Snow Trek</span>
+								<h2>Snowman</h2>
+								<span class="price">Rs. 7,489</span>
 							</div>
 						</div>
 					</div>
@@ -276,9 +276,9 @@
 							</div>
 							<div class="text text-center">
 								<span class="new">New Arrival</span>
-								<span class="category">Rum</span>
+								<span class="category">All-Rounder</span>
 								<h2>Citadelle</h2>
-								<span class="price">$69.00</span>
+								<span class="price">Rs. 11,700</span>
 							</div>
 						</div>
 					</div>
@@ -294,9 +294,9 @@
 								</div>
 							</div>
 							<div class="text text-center">
-								<span class="category">Rum</span>
-								<h2>The Glenlivet</h2>
-								<span class="price">$69.00</span>
+								<span class="category">Classic</span>
+								<h2>C</h2>
+								<span class="price">Rs. 15,980</span>
 							</div>
 						</div>
 					</div>
