--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -295,7 +295,7 @@
 							</div>
 							<div class="text text-center">
 								<span class="category">Classic</span>
-								<h2>C</h2>
+								<h2>Carver</h2>
 								<span class="price">Rs. 15,980</span>
 							</div>
 						</div>
