--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -220,7 +220,7 @@
 			<div class="container">
 				<div class="row justify-content-center pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
-          	<span class="subheading">Our Delightful offerings</span>
+          	<span class="subheading" style="color: green;">Our Delightful offerings</span>
             <h2>Tastefully Yours</h2>
           </div>
         </div>
