--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -52,10 +52,10 @@
 	      <div class="order-lg-last btn-group">
           <a href="#" class="btn-cart dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           	<span class="flaticon-shopping-bag"></span>
-          	<div class="d-flex justify-content-center align-items-center"><small>3</small></div>
+          	<div class="d-flex justify-content-center align-items-center"><small>0</small></div>
           </a>
           <div class="dropdown-menu dropdown-menu-right">
-				    <div class="dropdown-item d-flex align-items-start" href="#">
+				    <!-- <div class="dropdown-item d-flex align-items-start" href="#">
 				    	<div class="img" style="background-image: url(images/prod-1.jpg);"></div>
 				    	<div class="text pl-3">
 				    		<h4>Bacardi 151</h4>
@@ -75,11 +75,11 @@
 				    		<h4>Citadelle</h4>
 				    		<p class="mb-0"><a href="#" class="price">$22.50</a><span class="quantity ml-3">Quantity: 01</span></p>
 				    	</div>
-				    </div>
-				    <a class="dropdown-item text-center btn-link d-block w-100" href="cart.html">
+				    </div> -->
+				    <!-- <a class="dropdown-item text-center btn-link d-block w-100" href="cart.html">
 				    	View All
 				    	<span class="ion-ios-arrow-round-forward"></span>
-				    </a>
+				    </a> -->
 				  </div>
         </div>
 
@@ -94,15 +94,15 @@
 				<a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
 					aria-expanded="false">Apparel</a>
 				<div class="dropdown-menu" aria-labelledby="dropdown04">
-					<a class="dropdown-item" href="product.html">Men</a>
-					<a class="dropdown-item" href="product-single.html">Women</a>
+					<a class="dropdown-item" href="#">Men</a>
+					<a class="dropdown-item" href="#">Women</a>
 				</div>
 			</li>
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Footwear</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="product.html">Men</a>
-                <a class="dropdown-item" href="product-single.html">Women</a>
+              	<a class="dropdown-item" href="#">Men</a>
+                <a class="dropdown-item" href="#">Women</a>
               </div>
             </li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Accessories</a></li>
@@ -310,7 +310,7 @@
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-md-4">
-						<a href="product.html" class="btn btn-primary d-block">View All Products <span class="fa fa-long-arrow-right"></span></a>
+						<a href="#" class="btn btn-primary d-block">View All Products <span class="fa fa-long-arrow-right"></span></a>
 					</div>
 				</div>
 			</div>
