--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row row1">
                 <ul class="largenav pull-right">
-                    <li class="upper-links dropdown"><a class="links" href="">Link 1</a>
+                    <li class="upper-links dropdown"><a class="links" href="">Office Supplies</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Link</a>
@@ -70,7 +70,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Link 2</a>
+                    <li class="upper-links dropdown"><a class="links" href="">Corporate Gifts</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Link</a>
@@ -82,7 +82,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Link 3</a>
+                    <li class="upper-links dropdown"><a class="links" href="">Cleeaning Supplies</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Link</a>
@@ -94,7 +94,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Link 4</a>
+                    <li class="upper-links dropdown"><a class="links" href="">Pantry Supplies</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Link</a>
@@ -203,11 +203,6 @@
             <div class="swiper-slide">Slide 3</div>
             <div class="swiper-slide">Slide 4</div>
             <div class="swiper-slide">Slide 5</div>
-            <div class="swiper-slide">Slide 6</div>
-            <div class="swiper-slide">Slide 7</div>
-            <div class="swiper-slide">Slide 8</div>
-            <div class="swiper-slide">Slide 9</div>
-            <div class="swiper-slide">Slide 10</div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
@@ -220,81 +215,102 @@
     <div class="photo-gallery background">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">check out our partners' exciting stalls</h2>
-                <p class="text-center" style="margin-bottom: 5%;">Presenting to you the stalls of our respected
-                    Partners. Click on any stall to
-                    check them out.</p>
+                <h2 class="text-center">check out some Indian Brands</h2>
+                <p class="text-center" style="margin-bottom: 5%;">Presenting to you the stalls of some of the best Atmanirbhar Indian Brands!</p>
             </div>
             <div class="row photos">
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
                     <img class="img-fluid image" src="images/Shakedeal stall.png">
-                    <a href="sponsors/sp.html">
+                    <a href="products/brand.html">
                         <div class="overlay">
-                            <div class="text"><span class="company-name">Subtle Pixel</span> <br>
-                                Subtle Pixel is a digital creative agency that imagines, designs and develops unique
-                                brand identities and tailor-made
-                                digital solutions for cultural and corporate projects.
+                            <div class="text"><span class="company-name">Shakedeal</span> <br>
+                                ShakeDeal is a leading B2B commerce platform for procurement of business & Industrial
+                                supplies. ShakeDeal is looking to
+                                transform the traditional procurement practice by bringing an online approach to
+                                businesses looking for price advantage,
+                                discover-ability, and strategic sourcing. ShakeDeal is built for businesses. We
+                                differentiate ourselves by providing a
+                                product to manage typical B2B nature of transactions, customized pricing, enabling
+                                omnichannel solutions for business
+                                buying.
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
                     <img class="img-fluid image" src="images/Woodland.png">
-                    <a href="sponsors/remo.html">
+                    <a href="products/brand.html">
                         <div class="overlay">
-                            <div class="text"><span class="company-name">REMO</span> <br>
-                                REMO is a SAAS platform for Remote Interviews which integrates video chat, white board,
-                                candidate profiles like Github
-                                and lab environments (e.g. Programming, AWS, Azure etc.)
+                            <div class="text"><span class="company-name">Woodland</span> <br>
+                                Woodland offers an extensive line of footwear, performance apparel and outdoor gear.
+                                Whether it's a lightweight jacket
+                                for active pursuits or a summit tested parka for the coldest places on earth, the focus
+                                is on creating truly functional
+                                solutions for outdoor and adventure enthusiasts.
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
                     <img class="img-fluid image" src="images/Shakedeal stall.png">
-                    <a href="sponsors/hult.html">
+                    <a href="products/brand.html">
                         <div class="overlay">
-                            <div class="text"><span class="company-name">Hult Prize</span> <br>
-                                The Hult Prize is the world’s largest social impact competition. Run in partnership with
-                                the United Nations, student
-                                teams come together to compete to solve a pressing social issue by developing a
-                                scalable, sustainable social enterprise.
+                            <div class="text"><span class="company-name">Shakedeal</span> <br>
+                                ShakeDeal is a leading B2B commerce platform for procurement of business & Industrial
+                                supplies. ShakeDeal is looking to
+                                transform the traditional procurement practice by bringing an online approach to
+                                businesses looking for price advantage,
+                                discover-ability, and strategic sourcing. ShakeDeal is built for businesses. We
+                                differentiate ourselves by providing a
+                                product to manage typical B2B nature of transactions, customized pricing, enabling
+                                omnichannel solutions for business
+                                buying.
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
                     <img class="img-fluid image" src="images/Woodland.png">
-                    <a href="sponsors/finotize.html">
+                    <a href="products/brand.html">
                         <div class="overlay">
-                            <div class="text"><span class="company-name">Finotize</span> <br>
-                                FINOTIZE is an Online Legal Services Platform for Startups and SMEs. We support upcoming
-                                entrepreneurs with company
-                                registration, trademark protection, ROC filing, GST filing etc.
+                            <div class="text"><span class="company-name">Woodland</span> <br>
+                                Woodland offers an extensive line of footwear, performance apparel and outdoor gear.
+                                Whether it's a lightweight jacket
+                                for active pursuits or a summit tested parka for the coldest places on earth, the focus
+                                is on creating truly functional
+                                solutions for outdoor and adventure enthusiasts.
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
                     <img class="img-fluid image" src="images/Shakedeal stall.png">
-                    <a href="sponsors/firstmain.html">
+                    <a href="products/brand.html">
                         <div class="overlay">
-                            <div class="text"><span class="company-name">FIRST MAIN</span> <br>
-                                First Main is an innovation scout and support aggregator that aims at building an
-                                entrepreneurial ecosystem, where every
-                                member mutually benefits one another.
+                            <div class="text"><span class="company-name">Shakedeal</span> <br>
+                                ShakeDeal is a leading B2B commerce platform for procurement of business & Industrial
+                                supplies. ShakeDeal is looking to
+                                transform the traditional procurement practice by bringing an online approach to
+                                businesses looking for price advantage,
+                                discover-ability, and strategic sourcing. ShakeDeal is built for businesses. We
+                                differentiate ourselves by providing a
+                                product to manage typical B2B nature of transactions, customized pricing, enabling
+                                omnichannel solutions for business
+                                buying.
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
                     <img class="img-fluid image" src="images/Woodland.png">
-                    <a href="https://www.ecellrvce.in">
+                    <a href="products/brand.html">
                         <div class="overlay">
-                            <div class="text"><span class="company-name">E-Cell RVCE</span> <br>
-                                We at E-Cell with the motto Kindle. Create. Incubate strive to ignite creative thinking
-                                and nurture Entrepreneur instincts in student via our events workshops and industry
-                                interactions.
+                            <div class="text"><span class="company-name">Woodland</span> <br>
+                                Woodland offers an extensive line of footwear, performance apparel and outdoor gear.
+                                Whether it's a lightweight jacket
+                                for active pursuits or a summit tested parka for the coldest places on earth, the focus
+                                is on creating truly functional
+                                solutions for outdoor and adventure enthusiasts.
                             </div>
                         </div>
                     </a>
