--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Indian Brand</title>
+    <title>Woodland</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -52,11 +52,11 @@
 	      <div class="order-lg-last btn-group">
           <a href="#" class="btn-cart dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           	<span class="flaticon-shopping-bag"></span>
-          	<div class="d-flex justify-content-center align-items-center"><small>3</small></div>
+          	<div class="d-flex justify-content-center align-items-center"><small>0</small></div>
           </a>
           <div class="dropdown-menu dropdown-menu-right">
 				    <div class="dropdown-item d-flex align-items-start" href="#">
-				    	<div class="img" style="background-image: url(images/prod-1.jpg);"></div>
+				    	<!-- <div class="img" style="background-image: url(images/shoe3..jpeg);"></div>
 				    	<div class="text pl-3">
 				    		<h4>Bacardi 151</h4>
 				    		<p class="mb-0"><a href="#" class="price">$25.99</a><span class="quantity ml-3">Quantity: 01</span></p>
@@ -66,7 +66,7 @@
 				    	<div class="img" style="background-image: url(images/prod-2.jpg);"></div>
 				    	<div class="text pl-3">
 				    		<h4>Jim Beam Kentucky Straight</h4>
-				    		<p class="mb-0"><a href="#" class="price">$30.89</a><span class="quantity ml-3">Quantity: 02</span></p>
+				    		<p class="mb-0"><a href="#" class="price">$30.89</a><span class="quantity ml-3">Quantity: 01</span></p>
 				    	</div>
 				    </div>
 				    <div class="dropdown-item d-flex align-items-start" href="#">
@@ -74,12 +74,12 @@
 				    	<div class="text pl-3">
 				    		<h4>Citadelle</h4>
 				    		<p class="mb-0"><a href="#" class="price">$22.50</a><span class="quantity ml-3">Quantity: 01</span></p>
-				    	</div>
+				    	</div> -->
 				    </div>
-				    <a class="dropdown-item text-center btn-link d-block w-100" href="cart.html">
+				    <!-- <a class="dropdown-item text-center btn-link d-block w-100" href="cart.html">
 				    	View All
 				    	<span class="ion-ios-arrow-round-forward"></span>
-				    </a>
+				    </a> -->
 				  </div>
         </div>
 
@@ -94,19 +94,19 @@
 				<a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
 					aria-expanded="false">Apparel</a>
 				<div class="dropdown-menu" aria-labelledby="dropdown04">
-					<a class="dropdown-item" href="product.html">Men</a>
-					<a class="dropdown-item" href="product-single.html">Women</a>
+					<a class="dropdown-item" href="#">Men</a>
+					<a class="dropdown-item" href="#">Women</a>
 				</div>
 			</li>
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Footwear</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="product.html">Men</a>
-                <a class="dropdown-item" href="product-single.html">Women</a>
+              	<a class="dropdown-item" href="#">Men</a>
+                <a class="dropdown-item" href="#">Women</a>
               </div>
             </li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Accessories</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Research Lab</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">Accessories</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">Research Lab</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -226,7 +226,7 @@
 				<div class="row justify-content-center pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
           	<span class="subheading" style="color: green;">Our Delightful offerings</span>
-            <h2>Tastefully Yours</h2>
+            <h2>Tread with a Sure Foot</h2>
           </div>
         </div>
 				<div class="row">
@@ -310,7 +310,7 @@
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-md-4">
-						<a href="product.html" class="btn btn-primary d-block">View All Products <span class="fa fa-long-arrow-right"></span></a>
+						<a href="#" class="btn btn-primary d-block">View All Products <span class="fa fa-long-arrow-right"></span></a>
 					</div>
 				</div>
 			</div>
