--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -60,38 +60,38 @@
                 <ul class="largenav pull-right">
                     <li class="upper-links dropdown"><a class="links" href="">Office Supplies</a>
                         <ul class="dropdown-menu">
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a>
+                            <li class="profile-li"><a class="profile-links" href="">Office Machines</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">A4 & Photocopier Paper</a>
                             </li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Writing and Correction</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Printer Cartridges</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Computer Supplies</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">File & Folders</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Tapes</a></li>
                         </ul>
                     </li>
                     <li class="upper-links dropdown"><a class="links" href="">Corporate Gifts</a>
                         <ul class="dropdown-menu">
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a>
+                            <li class="profile-li"><a class="profile-links" href="">Apparel</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Movie</a>
                             </li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Entertainment</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">F&B</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Consumer Electronics</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Home Appliances</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Watches</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Cleeaning Supplies</a>
+                    <li class="upper-links dropdown"><a class="links" href="">Cleaning Supplies</a>
                         <ul class="dropdown-menu">
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a>
+                            <li class="profile-li"><a class="profile-links" href="">Brooms</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Misc.</a>
                             </li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Spill Kits</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Brushes</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Cleaning Liquid</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Vaporizers</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Hand Care</a></li>
                         </ul>
                     </li>
                     <li class="upper-links dropdown"><a class="links" href="">Pantry Supplies</a>
@@ -106,7 +106,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Link 5</a>
+                    <li class="upper-links dropdown"><a class="links" href="">Power Tools</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Link</a>
@@ -118,7 +118,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Link 6</a>
+                    <li class="upper-links dropdown"><a class="links" href="">Safety Equipments</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Link</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Link</a>
